static/css/src/login.css
html, body {
    margin: 0;
    padding: 0;
    font-family: Helvetica, sans-serif;
    font-size: 1em;
}

#hero {
    background: linear-gradient(to bottom, #1e5799 0%,#2989d8 15%,#207cca 97%,#7db9e8 100%);
    margin: 0;
    padding: 0;
    border: 0;
    width: 100%;
    z-index: -2;
    height: 100%;
}

.flashes {
    width: 80%;
    margin: 0 auto;
}

.flash {
    margin-top: 4em;
    margin-bottom: -4em;
}

.title {
    font-weight: normal;
    text-align: center;
}

#submit-btn {
    margin-top: 0.5em;
}

#error-msg-container {
    display: none;
}

.error {
    color: red;
    font-size: 0.9em;
    text-align: center;
}

.form-error {
    color: red;
    font-size: 0.9em;
    display: block;
}

.form-control {
    margin-bottom: 5px;
}

#form-container {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20%;
    color: #fff;
    max-width: 550px;
}

form {
    margin-left: .5em;
    margin-right: .5em;
}

form input.form-control {
    font-size: 1.1em;
    width: 100%;
    padding: .4em .5em;
    border-radius: 5px;
    border: 1px #777 solid;
}

label input[type=checkbox], label span {
    display: inline;
}

form button {
    font-size: 1.1em;

    border: 1px solid #444;
    border-radius: 5px;

    padding-top: 0.5em;
    padding-bottom: 0.5em;
    background-color: #34B526;

    width: 100%;
    color: #fff;
    text-align: center;
    display: block;
}

#forgot-password {
    font-size: 0.9em;
    padding: 0 0 0 0.5em;
    margin: 0;
    margin-left: .5em;
    color: #eee;
    text-decoration: none;
    display: block;
}

